Only produce preview warnings for immediate overriders of preview methods.